[package]
name = "rust-async-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1.20.1", features = ["full"] }
aws-sdk-dynamodb = "1.23.0"
aws-config = "1.2.1"
aws-smithy-runtime = "1.2.1"
aws-smithy-runtime-api = "1.4.0"
aws-smithy-types = "1.1.8"
rustls = "0.21.12"
hyper = { version = "0.14.13", features = ["http2"] }
hyper-rustls = { version = "0.24.2", features = ["rustls-native-certs", "http2"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "1.8.0", features = ["v4"] }
env_logger = "0.11.0"
log = "0.4.14"